inclusão de scripts

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
           <img src="images/horti.png" alt=""></a>
       </div>
     </div>
+    <!--https://matheusssoares.github.io/ajax.cloudflare.com/cdn-cgi/scripts/95c75768/cloudflare-static/rocket-loader.min.js-->
   </section>
   <section class="about-section section">
     <div class="container">
@@ -269,7 +270,7 @@
 
       Copyright &copy;
       <script data-cfasync="false"
-        src="../../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+        src="scripts/email-decode.min.js"></script>
       <script type="d93fc1364dcbc2ffb83272cb-text/javascript">document.write(new Date().getFullYear());</script> Matheus
       Soares Almeida | Todos os direitos reservados <i class="ion-heart" aria-hidden="true"></i> by <a
         href="https://matheusssoares.github.io/portfolio/" target="_blank">Matheus Soares</a>
@@ -294,8 +295,8 @@
 
   gtag('config', 'UA-23581568-13');
 </script>
-  <script src="../../../../ajax.cloudflare.com/cdn-cgi/scripts/95c75768/cloudflare-static/rocket-loader.min.js"
-    data-cf-settings="d93fc1364dcbc2ffb83272cb-|49" defer=""></script>
+<!--https://matheusssoares.github.io/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js-->
+  <script src="scripts/rocket-loader.min.js" data-cf-settings="d93fc1364dcbc2ffb83272cb-|49" defer=""></script>
 </body>
 
 </html>
