--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <div class="right-area">
                 <h5><a href="https://colorlib.com/cdn-cgi/l/email-protection"
                     class="__cf_email__">matheusssoares04@gmail.com</a></h5>
-                <h6>RESPOSTA EM 24 HORAS</h6>
+                <h6>RESPOSTA EM ATÉ 24 HORAS</h6>
               </div>
             </div>
           </div>
@@ -104,10 +104,6 @@
       </div>
     </div>
     <div class="portfolioContainer">
-      <div class="p-item app">
-        <a href="images/oft-app.png" data-fluidbox>
-          <img src="images/oft-app.png" alt=""></a>
-      </div>
       <div class="p-item sites">
         <a href="images/mobi4.png" data-fluidbox>
           <img src="images/mobi4.png" alt=""></a>
@@ -124,10 +120,6 @@
       <div class="p-item sistemas">
         <a href="images/erp.png" data-fluidbox>
           <img src="images/erp.png" alt=""></a>
-      </div>
-      <div class="p-item sites">
-        <a href="images/patio-norte.png" data-fluidbox>
-          <img src="images/patio-norte.png" alt=""></a>
       </div>
       <div class="p-item sistemas">
         <a class="img" href="images/horti.png" data-fluidbox>
