--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="col-md-1 col-lg-2"></div>
         <div class="col-md-10 col-lg-8">
           <div class="intro">
-            <div class="profile-img"><img src="images/photo.jpg" alt=""></div>
+            <div class="profile-img"><img src="images/photo_profile.jpg" alt=""></div>
             <h2><b>Matheus Soares</b></h2>
             <h4 class="font-yellow">Desenvolvedor Web - Mobile</h4>
             <ul class="information margin-tb-30">
